--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,24 +19,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js (cache by lockfile)
+      # Útil para fallar temprano si falta el lockfile
+      - name: Assert lockfile exists
+        run: |
+          ls -la
+          test -f package-lock.json || (echo "Falta package-lock.json en la raíz" && exit 1)
+
+      - name: Set up Node.js (cache)
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: ./delivery-app/package-lock.json
+          cache-dependency-path: |
+            package-lock.json
 
       - name: Install dependencies
-        working-directory: ./delivery-app
         run: npm ci
 
       - name: Run tests
-        working-directory: ./delivery-app
         run: npm test --if-present
 
       - name: Read app version
         id: vars
-        working-directory: ./delivery-app
         run: echo "APP_VERSION=$(node -p \"require('./package.json').version || '0.0.0'\")" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
@@ -57,8 +61,8 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
         with:
-          context: ./delivery-app
-          file: ./delivery-app/Dockerfile
+          context: .
+          file: ./Dockerfile
           push: false
           platforms: linux/amd64,linux/arm64
           tags: ${{ env.IMAGE_NAME }}:pr-${{ github.event.pull_request.number }}
@@ -70,8 +74,8 @@ jobs:
         if: github.event_name == 'push'
         uses: docker/build-push-action@v6
         with:
-          context: ./delivery-app
-          file: ./delivery-app/Dockerfile
+          context: .
+          file: ./Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
