--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,28 +19,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Útil para fallar temprano si falta el lockfile
+      # Verifica lockfile en el subdirectorio correcto
       - name: Assert lockfile exists
         run: |
           ls -la
-          test -f package-lock.json || (echo "Falta package-lock.json en la raíz" && exit 1)
+          ls -la delivery-app || true
+          test -f delivery-app/package-lock.json || (echo "Falta delivery-app/package-lock.json" && exit 1)
 
-      - name: Set up Node.js (cache)
+      - name: Set up Node.js (cache by lockfile)
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: |
-            package-lock.json
+          cache-dependency-path: delivery-app/package-lock.json
 
       - name: Install dependencies
+        working-directory: ./delivery-app
         run: npm ci
 
       - name: Run tests
+        working-directory: ./delivery-app
         run: npm test --if-present
 
       - name: Read app version
         id: vars
+        working-directory: ./delivery-app
         run: echo "APP_VERSION=$(node -p \"require('./package.json').version || '0.0.0'\")" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
@@ -56,7 +59,9 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
 
-      # Build para PRs (sin push)
+      # ====== ELIGE UNA OPCIÓN DE BUILD (A o B) ======
+
+      # Opción A: Dockerfile en la RAÍZ del repo
       - name: Build (PR, no push)
         if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v6
@@ -69,7 +74,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Build & Push para main (multi-arch)
       - name: Build & Push (main, multi-arch)
         if: github.event_name == 'push'
         uses: docker/build-push-action@v6
@@ -87,3 +91,7 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+    
+
+          ##incluir update helm chart values
