--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: delivery-app/package-lock.json
+          cache-dependency-path: ./delivery-app/package-lock.json
 
       - name: Install dependencies
         working-directory: ./delivery-app
