--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -50,12 +50,12 @@ jobs:
       - name: Logout any previous registry sessions (safety)
         run: docker logout || true
 
-      - name: Login to Docker Hub (always)
-        uses: docker/login-action@v3
-        with:
-          registry: docker.io
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            registry: docker.io
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Verify Docker login (must be ritatrcr)
         shell: bash
