--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,7 +19,7 @@ jobs:
       HELM_PAGES_REPO: ritatrcr/helm-chart               # repo GitHub Pages donde publicas charts
       HELM_CHART_DIR: charts/delivery-app
       HELM_CHART_NAME: delivery-app
-      HELM_REPO_URL: https://ritatrcr.github.io/helm-app-delivery/
+      HELM_REPO_URL: https://ritatrcr.github.io/helm-chart/
 
     steps:
       - name: Checkout main repo
@@ -51,11 +51,11 @@ jobs:
         run: docker logout || true
 
       - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            registry: docker.io
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Verify Docker login (must be ritatrcr)
         shell: bash
