--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,4 +1,4 @@
-name: Build & Push Docker (Helm steps commented)
+name: Build & Push Docker (Helm publish)
 
 on:
   push:
@@ -10,18 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      # ====== Docker image ======
       IMAGE_NAME: ritatrcr/delivery-app
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      HELM_PAT: ${{ secrets.PAT_HELMCHART }}             # token con permisos RW a ambos repos
-      HELM_MANIFESTS_REPO: ${{ github.repository }}      # repo actual donde vive el chart
-      HELM_PAGES_REPO: ritatrcr/helm-chart               # repo GitHub Pages donde publicas charts
-      HELM_CHART_DIR: charts/delivery-app
-      HELM_CHART_NAME: delivery-app
+      # ====== Helm / repos ======
+      HELM_PAT: ${{ secrets.PAT_HELMCHART }}              # PAT con RW a ambos repos
+      HELM_MANIFESTS_REPO: ritatrcr/manifiestos-delivery-app
+      HELM_PAGES_REPO: ritatrcr/helm-chart
       HELM_REPO_URL: https://ritatrcr.github.io/helm-chart/
 
+      # Ruta/nombre "por defecto" del chart (se validará/auto-detectará)
+      HELM_CHART_DIR: charts/patrones
+      HELM_CHART_NAME: patrones
+
     steps:
+      # ====== Checkout del repo actual (código app + Dockerfile) ======
       - name: Checkout main repo
         uses: actions/checkout@v4
 
@@ -33,6 +38,7 @@ jobs:
           test -f delivery-app/package.json || (echo "Falta delivery-app/package.json" && exit 1)
           test -f delivery-app/package-lock.json || (echo "Falta delivery-app/package-lock.json" && exit 1)
 
+      # ====== Docker multi-arch build ======
       - name: Set up QEMU (multi-arch)
         uses: docker/setup-qemu-action@v3
 
@@ -80,12 +86,22 @@ jobs:
           echo "CI_TAG=$CI_TAG" >> "$GITHUB_ENV"
           echo "Using APP_VERSION=$APP_VERSION CI_TAG=$CI_TAG"
 
+      - name: Compute release vars (docker & chart)
+        shell: bash
+        run: |
+          set -e
+          echo "DOCKER_VERSION=v${APP_VERSION}" >> "$GITHUB_ENV"
+          # Nota: usar "+" en chart version es válido; si lo prefieres, cambia a ".${{ github.run_number }}"
+          echo "CHART_VERSION=${APP_VERSION}+${{ github.run_number }}" >> "$GITHUB_ENV"
+          echo "DOCKER_VERSION=$DOCKER_VERSION"
+          echo "CHART_VERSION=$CHART_VERSION"
+
       # ====== BUILD & PUSH MULTI-ARCH ======
       - name: Build & Push image (multi-arch)
         uses: docker/build-push-action@v6
         with:
           # Dockerfile en la raíz que copia desde ./delivery-app
-          # Si tu Dockerfile vive en delivery-app/, cambia:
+          # Si tu Dockerfile vive en delivery-app/, ajusta:
           #   context: ./delivery-app
           #   file: ./delivery-app/Dockerfile
           context: .
@@ -110,52 +126,93 @@ jobs:
           echo "  - $IMAGE_NAME:v${APP_VERSION}"
           echo "  - $IMAGE_NAME:${CI_TAG}"
 
-      # (Opcional) Inspeccionar manifest multi-arch
-      - name: Inspect image manifest
+      - name: Inspect image manifest (optional)
         continue-on-error: true
         shell: bash
         run: docker buildx imagetools inspect "$IMAGE_NAME:latest" || true
 
-
-
-
-
+      # ====== HELM: checkout de manifiestos (chart fuente) ======
       - name: Checkout manifests repo (chart fuente)
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          repository: ritatrcr/manifiestos-delivery-app
+          repository: ${{ env.HELM_MANIFESTS_REPO }}
           token: ${{ secrets.PAT_HELMCHART }}
           path: manifiestos
 
-      - name: Update Helm chart values.yaml image tag
-        shell: bash
-        run: |
-          set -e
-          cd manifiestos/charts/patrones
-          yq eval ".image.tag = \"${DOCKER_VERSION}\"" -i values.yaml
+      # ====== Instalar Helm & yq ======
+      - name: Set up Helm CLI
+        uses: azure/setup-helm@v4
+        with:
+          version: v3.14.4
 
-      - name: Update Chart version in Chart.yaml
+      - name: Install yq
         shell: bash
         run: |
           set -e
-          cd manifiestos/charts/patrones
+          sudo curl -L "https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64" -o /usr/local/bin/yq
+          sudo chmod +x /usr/local/bin/yq
+          yq --version
+
+      # ====== Diagnóstico de rutas y localización del chart ======
+      - name: Debug listing (manifiestos)
+        shell: bash
+        run: |
+          set -e
+          echo "Contenido de 'manifiestos' (nivel 2):"
+          find manifiestos -maxdepth 2 -type d -print
+
+      - name: Locate chart dir
+        shell: bash
+        run: |
+          set -e
+          CAND="manifiestos/${HELM_CHART_DIR:-charts/patrones}"
+          if [ -f "$CAND/Chart.yaml" ]; then
+            CHART_DIR="$CAND"
+          else
+            echo "No se encontró Chart.yaml en $CAND. Escaneando..."
+            CHART_DIR="$(find manifiestos -maxdepth 3 -type f -name Chart.yaml -print | head -n 1 | xargs -I{} dirname {} || true)"
+          fi
+          [ -n "$CHART_DIR" ] && [ -f "$CHART_DIR/Chart.yaml" ] || { echo "::error::No se encontró Chart.yaml en 'manifiestos'"; exit 1; }
+          echo "CHART_DIR=$CHART_DIR" >> "$GITHUB_ENV"
+          echo "Usando CHART_DIR=$CHART_DIR"
+
+      # ====== Actualiza metadatos del Chart y tag de imagen ======
+      - name: Update Chart metadata & image tag
+        shell: bash
+        run: |
+          set -e
+          cd "$CHART_DIR"
+
+          # Garantiza campos mínimos requeridos
+          yq eval ".apiVersion = (.apiVersion // \"v2\")" -i Chart.yaml
+          yq eval ".name = (.name // \"${HELM_CHART_NAME}\")" -i Chart.yaml
           yq eval ".version = \"${CHART_VERSION}\"" -i Chart.yaml
           yq eval ".appVersion = \"${APP_VERSION}\"" -i Chart.yaml
 
+          # Actualiza tag de imagen en values.yaml (ajusta ruta si difiere en tu values)
+          yq eval ".image.tag = \"${DOCKER_VERSION}\"" -i values.yaml
+
+          echo "=== Chart.yaml ==="
+          cat Chart.yaml
+          echo "=== values.yaml (primeras líneas) ==="
+          head -n 60 values.yaml || true
+
+      # ====== Empaqueta el chart ======
       - name: Package Helm Chart
         shell: bash
         run: |
           set -e
-          cd manifiestos
-          helm package charts/patrones
-          PKG="$(ls -1 patrones-*.tgz | tail -n 1)"
+          helm package "$CHART_DIR" --destination manifiestos
+          PKG="$(ls -1t manifiestos/*.tgz | head -n 1)"
+          [ -n "$PKG" ] || { echo "::error::No se generó el paquete .tgz"; exit 1; }
           echo "CHART_PKG=$PKG" >> $GITHUB_ENV
           echo "Empaquetado: $PKG"
 
+      # ====== Checkout del repo de Pages (índice de charts) ======
       - name: Checkout helm-chart repo (GitHub Pages)
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          repository: ritatrcr/helm-chart
+          repository: ${{ env.HELM_PAGES_REPO }}
           token: ${{ secrets.PAT_HELMCHART }}
           path: helm-chart
 
@@ -163,7 +220,7 @@ jobs:
         shell: bash
         run: |
           set -e
-          cp "manifiestos/${{ env.CHART_PKG }}" helm-chart/
+          cp "${CHART_PKG}" helm-chart/
           ls -lah helm-chart
 
       - name: Update Helm repo index (merge)
@@ -172,11 +229,11 @@ jobs:
           set -e
           cd helm-chart
           if [ -f index.yaml ]; then
-            helm repo index . --url https://github.com/Ritatrcr/helm-chart --merge index.yaml
+            helm repo index . --url "${HELM_REPO_URL}" --merge index.yaml
           else
-            helm repo index . --url https://github.com/Ritatrcr/helm-chart
+            helm repo index . --url "${HELM_REPO_URL}"
           fi
-          cat index.yaml | head -n 40
+          head -n 40 index.yaml
 
       - name: Commit and push changes to helm-chart repo
         shell: bash
@@ -187,5 +244,5 @@ jobs:
           git config user.email "github-actions@github.com"
           git pull --rebase || true
           git add .
-          git commit -m "Publish chart patrones ${CHART_VERSION}" || echo "No commit needed"
+          git commit -m "Publish chart ${HELM_CHART_NAME} ${CHART_VERSION}" || echo "No commit needed"
           git push origin main
