--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -153,7 +153,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ env.HELM_MANIFESTS_REPO }}
-          token: ${{ env.HELM_PAT }}
+          token: ${{ env.PAT_HELMCHART }}
           path: manifiestos
           persist-credentials: false
 
